--- a/public/CircularNavigation/css/demo.css
+++ b/public/CircularNavigation/css/demo.css
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono);
+ 
 @font-face {
 	font-family: 'codropsicons';
 	src:url('../fonts/codropsicons/codropsicons.eot');
