--- a/public/CircularNavigation/css/component1.css
+++ b/public/CircularNavigation/css/component1.css
@@ -183,13 +183,11 @@ items should be rotated by x, minus (sum of angles - 180)2s (for this demo) */
 }
 
 .csstransforms .cn-wrapper li:nth-child(odd) a {
-  background-color: #a11313;
-  background-color: hsla(0, 88%, 63%, 1);
+  background-color:rgb(48, 48, 48);
 }
 
 .csstransforms .cn-wrapper li:nth-child(even) a {
-  background-color: #a61414;
-  background-color: hsla(0, 88%, 65%, 1);
+  background-color: rgb(155, 195, 75);
 }
 
 /* active style */
