--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,11 +2,140 @@
 html,
 body {
     background-color: #303030;
-    font-size: 20px;
     color: white;
     width: 100%;
     padding: 0;
     margin-left: 0;
     margin-right: 0;
+   font-size: 19px;
+  font-family: 'Roboto Mono', sans-serif;
+  font-weight: 400;
+  line-height: 1.4em;
+}
+
+#container {
+  width: 100%;
+}
+
+#card-container {
+  text-align: center;
+}
+
+.col-wrapper {
+  display: inline-block;
+  margin: 0 -5px 0 0;
+  width: 49%;
+  vertical-align: top;
+}
+
+.col {
+  display: inline-block;
+  margin: 0 -5px -5px 0;
+  width: 50%;
+  vertical-align: top;
+}
+
+.item {
+  width: calc(100% - 25px);
+ 
+  margin: 25px auto;
+  text-align: left;
+  background-color: #303030;
+  -webkit-box-shadow:-1px -2px 20px 0px rgb(36, 33, 36);
+  -moz-box-shadow: -1px -2px 20px 0px rgb(36, 33, 36);
+  box-shadow: -1px -2px 20px 0px rgb(36, 33, 36);
+  border-radius: 6px;
+  height:400px;
+}
+
+
+.item-desc {
+  position: relative;
+  padding: 25px;
+
+}
+
+
+
+.item-heading {
+  font-size: 1.0em;
+  margin: 0 0 10px 0;
+  font-weight: 500;
+  text-align: center;
+}
+ .item-desc img{
+    	height:300px;
+    	text-align: center;
+    	margin: auto;
+    	
+    }
+
+
+.controls{
+	display: flex;
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    z-index: 999;
+    padding: 5px 4px;
+}
+
+.controls .control{
+     width: 12px;
+    height: 12px;
+    border-radius: 100%;
    
+    margin: 0 5px;
+    }
+    .control-left{
+    	background-color: rgb(136,112,195);
+
+    }
+    .control-right{
+    	background-color: rgb(155,195,75);
+
+    }
+    .control-center{
+    	background-color: rgb(236,65,118);
+    }
+   
+@media (max-width: 1550px) {
+  
+  .col-wrapper {
+    width: 40%;
+  }
+ 
+  .col-1, .col-2 {
+    width: 100%;
+    display: block;
+  }
+  
+}
+
+@media (max-width: 985px) {
+  
+  body {
+    font-size: 22px;
+  }
+  
+  .col-wrapper {
+    width: 48%;
+  }
+  
+}
+
+@media (max-width: 675px) {
+  
+  .col-wrapper {
+    width: 75%;
+  }
+  
+}
+
+@media (max-width: 525px) {
+  
+  .col-wrapper {
+    width: 96%;
+  }
+  
 }
