--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Roboto Mono', sans-serif;
   font-weight: 400;
   line-height: 1.4em;
+  overflow:hidden;
 }
 
 #container {
