--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,9 +11,13 @@ body {
   font-family: 'Roboto Mono', sans-serif;
   font-weight: 400;
   line-height: 1.4em;
-  overflow:hidden;
-}
+  overflow-x:hidden;
 
+}
+body{
+overflow-y:hidden;
+
+}
 #container {
   width: 100%;
 }
