--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -55,7 +55,11 @@ overflow-y:hidden;
   border-radius: 6px;
   height:400px;
 }
-
+.item :hover {
+	 -webkit-box-shadow:-1px -2px 20px 5px rgb(36, 33, 36);
+  -moz-box-shadow: -1px -2px 20px 5px rgb(36, 33, 36);
+  box-shadow: -1px -2px 20px 5px rgb(36, 33, 36);
+}
 
 .item-desc {
   position: relative;
