--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -111,6 +111,24 @@ overflow-y:hidden;
     	background-color: rgb(236,65,118);
     }
    
+/*Span styles*/
+
+.spGreen{
+  color:rgb(155,195,75);
+
+}
+
+.spMagenta{
+  color:rgb(236,65,118);
+
+}
+
+.spPurple{
+    color:rgb(136,112,195);
+}
+
+
+
 
 /*Code for modal*/
 .md-modal {
