--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,11 +13,21 @@ body {
   line-height: 1.4em;
   overflow-x:hidden;
 
+
 }
 body{
 overflow-y:hidden;
 
 }
+
+  ::-moz-selection { /* Code for Firefox */
+    background: #9e9e9e;
+}
+
+::selection {
+    background:#9e9e9e;
+}
+
 #container {
   width: 100%;
   margin-left:auto;
