added 'navbar/>' in toggle button

--- a/public/workshop/golang/assets3/css/style.css
+++ b/public/workshop/golang/assets3/css/style.css
@@ -258,6 +258,12 @@ overflow-y:hidden;
   transform: scale(1);
   opacity: 1;
 }
+#collapser{
+  border-width: 0px;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+  background-color: transparent;
+}
 
 
 
