--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -325,3 +325,80 @@ overflow-y:hidden;
   
   
 }
+
+
+
+
+
+/* card style*/
+
+.box {
+  margin-top: 5vh;
+  width: 300px;
+  height: 300px;
+  border-radius: 6px;
+  box-shadow: 0 2px 30px rgba(black, .2);
+  background: lighten(#f0f4c3, 10%);
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+  -webkit-box-shadow:-1px -2px 20px 0px rgb(36, 33, 36);
+  -moz-box-shadow: -1px -2px 20px 0px rgb(36, 33, 36);
+  box-shadow: -1px -2px 20px 0px rgb(36, 33, 36);
+}
+
+.wave {
+  opacity: .99;
+  position: absolute;
+  top: 3%;
+  left: 50%;
+  background: #0af;
+  width: 500px;
+  height: 500px;
+  margin-left: -250px;
+  margin-top: -250px;
+  transform-origin: 50% 48%;
+  border-radius: 43%;
+  animation: drift 3000ms infinite linear;
+}
+
+.wave.-three {
+  animation: drift 5000ms infinite linear;
+  background-color: #232222;
+}
+
+.wave.-two {
+  animation: drift 7000ms infinite linear;
+  opacity: .8;
+  background: #84ef35;
+}
+
+.box:after {
+  content: '';
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(#e8a, 1), rgba(#def, 0) 80%, rgba(white, .5));
+  z-index: 11;
+  transform: translate3d(0, 0, 0);
+}
+
+.title {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  line-height: 300px;
+  text-align: center;
+  transform: translate3d(0, 0, 0);
+  color: white;
+  font-size: 24px;
+  text-shadow: 0 1px 0 rgba(black, .1);
+}
+@keyframes drift {
+  from { transform: rotate(0deg); }
+  from { transform: rotate(360deg); }
+}
