--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -334,12 +334,12 @@ overflow-y:hidden;
 
 .box {
   margin-top: 5vh;
-  width: 300px;
+  width: 100%;
   height: 300px;
   border-radius: 6px;
   box-shadow: 0 2px 30px rgba(black, .2);
   background: lighten(#f0f4c3, 10%);
-  position: relative;
+  /*position: relative;*/
   overflow: hidden;
   transform: translate3d(0, 0, 0);
   -webkit-box-shadow:-1px -2px 20px 0px rgb(36, 33, 36);
