--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -398,7 +398,16 @@ overflow-y:hidden;
   font-size: 24px;
   text-shadow: 0 1px 0 rgba(black, .1);
 }
+#collapser{
+  border-width: 0px;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+  background-color: transparent;
+}
 @keyframes drift {
   from { transform: rotate(0deg); }
   from { transform: rotate(360deg); }
+}
+h2{
+  font-size: 28px;
 }
