--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -326,7 +326,10 @@ overflow-y:hidden;
   
 }
 
-
+.prize{
+  text-align: center;
+  color:rgb(155,195,75);
+}
 
 
 
@@ -335,7 +338,7 @@ overflow-y:hidden;
 .box {
   margin-top: 5vh;
   width: 100%;
-  height: 300px;
+  height: 350px;
   border-radius: 6px;
   box-shadow: 0 2px 30px rgba(black, .2);
   background: lighten(#f0f4c3, 10%);
