responsive home page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -261,70 +261,7 @@ overflow-y:hidden;
 
 
 
-@media screen and (max-width: 32em) {
-  body { font-size: 75%; }
-}
 
-
-
-/*THEEERN MODAL CODE*/
-
-
-
-
-@media (max-width: 1550px) {
-  
-  .col-wrapper {
-    width: 33%;
-  }
- 
-  .col-1, .col-2 {
-    width: 100%;
-    display: block;
-  }
-  .item-desc img{
-    	height:300px;
-    }
-  
-}
-
-@media (max-width:1024px) {
-  
-  body {
-    font-size: 22px;
-  }
-  
-  .col-wrapper {
-    width:75%;
-  }
-  .item-desc img{
-    	height:300px;
-    }
-  
-}
-
-@media (max-width: 675px) {
-  
-  .col-wrapper {
-    width: 72%;
-  }
-   .item-desc img{
-    	height:250px;
-    }
-  
-}
-
-@media (max-width: 525px) {
-  
-  .col-wrapper {
-    width: 90%;
-  }
-   .item-desc img{
-    	height:250px;
-    }
-  
-  
-}
 
 .prize{
   text-align: center;
@@ -416,3 +353,104 @@ h2{
 }
 
 
+
+
+#greeting{
+  font-size: 75px;text-align: center;
+}
+
+
+
+
+
+
+@media screen and (max-width: 32em) {
+  body { font-size: 75%; }
+}
+
+
+
+
+#t-rex{
+  height: 350px;left: 5vw;
+}
+
+/*THEEERN MODAL CODE*/
+
+
+
+
+@media (max-width: 1550px) {
+  
+  .col-wrapper {
+    width: 33%;
+  }
+ 
+  .col-1, .col-2 {
+    width: 100%;
+    display: block;
+  }
+  .item-desc img{
+      height:300px;
+    }
+  
+}
+
+@media (max-width:1024px) {
+  
+  body {
+    font-size: 22px;
+  }
+  
+  .col-wrapper {
+    width:75%;
+  }
+  .item-desc img{
+      height:300px;
+    }
+  
+}
+
+@media (max-width: 675px) {
+  
+  .col-wrapper {
+    width: 72%;
+  }
+   .item-desc img{
+      height:250px;
+    }
+  
+}
+
+@media (max-width: 525px) {
+  
+  .col-wrapper {
+    width: 90%;
+  }
+   .item-desc img{
+      height:250px;
+    }
+
+  #greeting{
+    font-size: 45px;
+  }
+
+  .dateText{
+    font-size: 26px;
+  }
+
+  h1{
+    font-size: 27px;
+  }
+
+  h2{
+    font-size: 15px;
+  }
+
+  #t-rex{
+    height: 236px;left: -9vw;
+  }
+
+  
+  
+}
